--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "short_name": "EasySurvey",
   "start_url": ".",
   "orientation": "any",
-  "scope": ".",
+  "scope": "/easy-survey/",
   "icons": [
         {
           "src": "/easy-survey/assets/images/windows11/SmallTile.scale-100.png",
